<resources>
    <string name="app_name">ShoeStore</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="boarding_msg_body">Thank you for joining us , Our app will help you adding shoes to your store</string>
    <string name="boarding_msg_header">Hi , there</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="company">Company</string>
    <string name="shoe_size">Shoe size</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="instruction_1">1.You can add new shoe from the shoe list</string>
    <string name="instruction_2">2.In shoe details you\'re required to add show details</string>
    <string name="start">Start</string>
</resources>
