<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".instructions.InstructionFragment">


        <TextView
            android:id="@+id/tv_instruction1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instruction_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Instruction 1" />

        <TextView
            android:id="@+id/tv_instruction2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instruction_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_instruction1"
            app:layout_constraintVertical_bias="0.106" />

        <Button
            android:id="@+id/btn_start_shopping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:background="@drawable/button"
            style="@style/Button.style"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_instruction2"
            app:layout_constraintVertical_bias="0.334" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>